REGRESSION(r287440) Do not wrap the content for a collapsed whitespace https://bugs.webkit.org/show_bug.cgi?id=234710

Reviewed by Antti Koivisto.

Source/WebCore:

While r287440 was correct, shouldKeepEndOfLineWhitespace had an unintentional side-effect of
keeping collapsed whitespace content on the line even when it is followed by an inline box end
with margin/padding/border that would otherwise overflow the line.

e.g <div style="width: 0px"><span style="border-right: 100px;">X </span></div>
^^ the overflowing inline box end should not be wrapped over to the next line.

Test: fast/inline/trailing-whitespace-content-with-overflowing-inline-box.html

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::isWhitespaceOnlyContent):
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
(WebCore::Layout::isVisuallyEmptyWhitespaceContent): Deleted.

LayoutTests:

* fast/inline/trailing-whitespace-content-with-overflowing-inline-box-expected.html: Added.
* fast/inline/trailing-whitespace-content-with-overflowing-inline-box.html: Added.
* platform/ios/fast/borders/rtl-border-01-expected.txt: Redo rebaselining. While the content visually looks
odd (overflowing inline box), it is the expected behavior.



Canonical link: https://commits.webkit.org/245605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287470 268f45cc-cd09-0410-ab3c-d52691b4dbfc